// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BillingUsage/> should display danger progress bar 1`] = `
<div
  class="usage-progress progress"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="63"
    class="progress-bar bg-primary"
    role="progressbar"
    style="width: 63%;"
  />
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="37"
    class="progress-bar bg-danger"
    role="progressbar"
    style="width: 37%;"
  />
</div>
`;

exports[`<BillingUsage/> should display loader 1`] = `
<div
  class="container"
>
  <div
    class="inner"
    style="min-height: 500px;"
  >
    <i
      class="icon-custom icon-circle-o-notch md-spin"
      style="font-size: 40px;"
    />
  </div>
</div>
`;

exports[`<BillingUsage/> should display price 1`] = `
<div
  class="wrapper"
>
  <h4
    class="header"
  >
    <i
      class="icon material-icons"
    >
      insert_chart
    </i>
    Usage & Plans
  </h4>
  <div
    class="card-group card-group"
  >
    <div
      class="card-current-plan card card"
    >
      <div
        class="card-title current-plan-title pro card-title"
      >
        <div>
          Pro monthly plan
        </div>
        <span
          class="currentPlanBadge badge badge-info"
        >
          CURRENT PLAN
        </span>
      </div>
      <div
        class="card-body card-body"
      >
        <div>
          <div
            class="ticket-numbers"
          >
            1,000
            /
            2,000
             tickets
             
            <a
              id="current-period"
            >
              <i
                class="material-icons text-muted"
              >
                info_outline
              </i>
            </a>
          </div>
          <div
            class="usage-progress progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="50"
              class="progress-bar bg-primary"
              role="progressbar"
              style="width: 50%;"
            />
          </div>
          <div
            class="flex justify-content-between"
          >
            <div>
              $
              10
               extra cost
            </div>
            <div>
              <strong>
                Usage reset on:
              </strong>
               
              Oct 11
            </div>
          </div>
        </div>
        <div
          class="integration-numbers"
        >
          0
          /
          200
           
          <b>
            <a
              to="/app/settings/integrations"
            >
              integrations
            </a>
          </b>
           
          <a
            id="integrations-consumed"
          >
            <i
              class="material-icons text-muted"
            >
              info_outline
            </i>
          </a>
        </div>
        <div
          class="description"
        >
          <div>
            Your current subscription started on
             
            <strong>
              Aug 22
            </strong>
            .
          </div>
          <button
            class="btn btn-primary"
            type="button"
          >
            Update plan
          </button>
        </div>
      </div>
    </div>
    <div
      class="card automation-card col-lg-4 card"
    >
      <div
        class="card-title card-title"
      >
        Automation
      </div>
      <div
        class="card-body automation-card-body card-body"
      >
        <div
          class="description"
        >
          <p>
            Leverage the power of the
             
            <b>
              advanced self-service features
            </b>
             like customized report issue flow and self-service integrated in help center!
            <br />
            <b>
              Track
            </b>
             your customers’ requests and see
             
            <b>
              how many you automate
            </b>
            .
          </p>
        </div>
        <div
          class="upgrade-button"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <button
              class="upgradeButton btn btn-outline-warning"
              type="button"
            >
              <span
                class="mr-2 upgradeLabel"
              >
                Subscribe
              </span>
              <img
                alt="upgrade-icon"
                class="upgradeIcon"
                src="test-file-stub"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    If you have any questions or if you want to unsubscribe, please contact us at
     
    <a
      href="mailto:support@gorgias.com"
    >
      support@gorgias.com
    </a>
     
    or
     
    <a
      href=""
    >
      Live Chat
    </a>
    .
  </p>
</div>
`;

exports[`<BillingUsage/> should display tooltip 1`] = `
<div
  class="tooltip-inner"
  role="tooltip"
>
  Number of tickets included in your current plan VS total number of tickets used between:
  <br />
  Oct 10
   and 
  Oct 11
</div>
`;

exports[`<BillingUsage/> should display warning progress bar 1`] = `
<div
  class="usage-progress progress"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="progress-bar bg-warning"
    role="progressbar"
    style="width: 100%;"
  />
</div>
`;

exports[`<BillingUsage/> should load with empty props 1`] = `
<div
  class="wrapper"
>
  <h4
    class="header"
  >
    <i
      class="icon material-icons"
    >
      insert_chart
    </i>
    Usage & Plans
  </h4>
  <div
    class="card-group card-group"
  >
    <div
      class="card-current-plan card card"
    >
      <div
        class="card-title current-plan-title pro card-title"
      >
        <div>
          Pro monthly plan
        </div>
        <span
          class="currentPlanBadge badge badge-info"
        >
          CURRENT PLAN
        </span>
      </div>
      <div
        class="card-body card-body"
      >
        <div>
          <div
            class="ticket-numbers"
          >
            1,000
            /
            2,000
             tickets
             
            <a
              id="current-period"
            >
              <i
                class="material-icons text-muted"
              >
                info_outline
              </i>
            </a>
          </div>
          <div
            class="usage-progress progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="50"
              class="progress-bar bg-primary"
              role="progressbar"
              style="width: 50%;"
            />
          </div>
          <div
            class="flex justify-content-between"
          >
            <div>
              $
              10
               extra cost
            </div>
            <div>
              <strong>
                Usage reset on:
              </strong>
               
              Oct 11
            </div>
          </div>
        </div>
        <div
          class="integration-numbers"
        >
          0
          /
          200
           
          <b>
            <a
              to="/app/settings/integrations"
            >
              integrations
            </a>
          </b>
           
          <a
            id="integrations-consumed"
          >
            <i
              class="material-icons text-muted"
            >
              info_outline
            </i>
          </a>
        </div>
        <div
          class="description"
        >
          <div>
            Your current subscription started on
             
            <strong>
              Aug 22
            </strong>
            .
          </div>
          <button
            class="btn btn-primary"
            type="button"
          >
            Update plan
          </button>
        </div>
      </div>
    </div>
    <div
      class="card automation-card col-lg-4 card"
    >
      <div
        class="card-title card-title"
      >
        Automation
      </div>
      <div
        class="card-body automation-card-body card-body"
      >
        <div
          class="description"
        >
          <p>
            Leverage the power of the
             
            <b>
              advanced self-service features
            </b>
             like customized report issue flow and self-service integrated in help center!
            <br />
            <b>
              Track
            </b>
             your customers’ requests and see
             
            <b>
              how many you automate
            </b>
            .
          </p>
        </div>
        <div
          class="upgrade-button"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <button
              class="upgradeButton btn btn-outline-warning"
              type="button"
            >
              <span
                class="mr-2 upgradeLabel"
              >
                Subscribe
              </span>
              <img
                alt="upgrade-icon"
                class="upgradeIcon"
                src="test-file-stub"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    If you have any questions or if you want to unsubscribe, please contact us at
     
    <a
      href="mailto:support@gorgias.com"
    >
      support@gorgias.com
    </a>
     
    or
     
    <a
      href=""
    >
      Live Chat
    </a>
    .
  </p>
</div>
`;
